WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38154
REGRESSION: after 56028 FastMalloc calls madvise too often
https://bugs.webkit.org/show_bug.cgi?id=38154
Summary
REGRESSION: after 56028 FastMalloc calls madvise too often
Stephanie Lewis
Reported
2010-04-26 17:31:24 PDT
<
rdar://problem/7834433
> REGRESSSION: 1.5% PLT regression due to 56028 (return memory quicker). To save on madvise calls when recommitting memory recommit the entire chosen span and then carve the span instead of carving the span up and only committing the part that will be used immediately.
Attachments
Change the recommit policy to commit entire spans at one time.
(5.02 KB, patch)
2010-04-26 17:43 PDT
,
Stephanie Lewis
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephanie Lewis
Comment 1
2010-04-26 17:43:09 PDT
Created
attachment 54354
[details]
Change the recommit policy to commit entire spans at one time. Change the recommit policy to recommit entire spans at one time.
WebKit Review Bot
Comment 2
2010-04-26 17:45:41 PDT
Attachment 54354
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 JavaScriptCore/wtf/FastMalloc.cpp:1688: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] JavaScriptCore/wtf/FastMalloc.cpp:1694: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2010-04-27 10:14:18 PDT
Comment on
attachment 54354
[details]
Change the recommit policy to commit entire spans at one time. r=me Any data on how much of an improvement this is?
Stephanie Lewis
Comment 4
2010-04-27 16:31:23 PDT
Committed
http://trac.webkit.org/changeset/58346
. This is about a .5% improvement. The FastMalloc file has historically not conformed to style guidelines, and my changes matched the file's style.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug