https://bugs.webkit.org/show_bug.cgi?id=38154 FastMalloc calls madvise too often. <rdar://problem/7834433> REGRESSSION: 1.5% PLT regression due to 56028 (return memory quicker). To save on madvise calls when recommitting memory recommit the entire span and then carve it instead of carving the span up and only committing the part that will be used immediately.

Reviewed by Geoff Garen.

* wtf/FastMalloc.cpp:
(WTF::TCMalloc_PageHeap::New):
(WTF::TCMalloc_PageHeap::AllocLarge):
(WTF::TCMalloc_PageHeap::Carve):



Canonical link: https://commits.webkit.org/49620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58346 268f45cc-cd09-0410-ab3c-d52691b4dbfc